--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="MyCustomTabText" parent="TextAppearance.Design.Tab">
+    <style name="MyCustomTabLayOut" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#00007f</item>
         <item name="textAllCaps">false</item>
-        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
