--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.hongloan.timereminder.MainActivity">
+<android.support.v7.widget.Toolbar
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:id="@+id/toolbar"
+    android:theme="@style/ToolBarStyle"
+    android:background="@color/color_tab_unselected">
 
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-    </android.support.v7.widget.Toolbar>
-
+</android.support.v7.widget.Toolbar>
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="11"
+        android:layout_weight="10"
         android:background="@android:color/white">
 
     </android.support.v4.view.ViewPager>
