--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.hongloan.timereminder.MainActivity">
-<android.support.v7.widget.Toolbar
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:id="@+id/toolbar"
-    android:theme="@style/ToolBarStyle"
-    android:background="@color/color_tab_unselected">
 
-</android.support.v7.widget.Toolbar>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/color_tab_unselected"
+        android:theme="@style/ToolBarStyle">
+
+    </android.support.v7.widget.Toolbar>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
@@ -30,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:tabBackground="@drawable/tab_color_selector"
+        app:tabBackground="@color/colorPrimary"
         app:tabTextAppearance="@style/MyCustomTabLayOut">
 
     </android.support.design.widget.TabLayout>
