--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/color_tab_unselected"
+        android:background="@color/color_toolbar"
         android:theme="@style/ToolBarStyle">
 
     </android.support.v7.widget.Toolbar>
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:tabBackground="@color/colorPrimary"
+        app:tabBackground="@drawable/tab_color_selector"
         app:tabTextAppearance="@style/MyCustomTabLayOut">
 
     </android.support.design.widget.TabLayout>
