--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,15 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="card_view_task_margin">2dp</dimen>
+    <dimen name="card_view_task_radious">2dp</dimen>
+    <dimen name="card_view_task_tv_title_size">15sp</dimen>
+    <dimen name="card_view_task_tv_time_size">13sp</dimen>
+    <dimen name="card_view_task_tv_times_remind_size">13sp</dimen>
+    <dimen name="card_view_task_rd_done_margin">10dp</dimen>
+
+    <dimen name="fragment_task_list_btn_add_task_width">50dp</dimen>
+    <dimen name="fragment_task_list_btn_add_task_height">50dp</dimen>
+    <dimen name="fragment_task_list_btn_add_task_margin">20dp</dimen>
 </resources>
