--- a/app/src/main/res/layout/card_view_task.xml
+++ b/app/src/main/res/layout/card_view_task.xml
@@ -31,7 +31,7 @@
             android:layout_below="@+id/card_view_task_tv_time"
             android:layout_toEndOf="@+id/card_view_task_rd_done"
             android:layout_toRightOf="@+id/card_view_task_rd_done"
-            android:textColor="@android:color/darker_gray"
+            android:textColor="@color/color_tv_time"
             android:textSize="@dimen/card_view_task_tv_times_remind_size"
             tools:text="every hour" />
 
@@ -53,11 +53,11 @@
             android:id="@+id/card_view_task_tv_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="@dimen/card_view_task_tv_time_size"
-            tools:text="20/11/2016"
             android:layout_below="@+id/card_view_task_tv_title"
+            android:layout_toEndOf="@+id/card_view_task_rd_done"
             android:layout_toRightOf="@+id/card_view_task_rd_done"
-            android:layout_toEndOf="@+id/card_view_task_rd_done" />
+            android:textColor="@color/color_tv_time"
+            android:textSize="@dimen/card_view_task_tv_time_size"
+            tools:text="20/11/2016" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
