--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="?android:attr/actionBarSize"
         android:background="@color/color_toolbar"
         android:theme="@style/ToolBarStyle">
 
@@ -32,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:tabBackground="@drawable/tab_color_selector"
+        app:tabBackground="@drawable/selector_tab_color"
         app:tabTextAppearance="@style/MyCustomTabLayOut">
 
     </android.support.design.widget.TabLayout>
