custom toolbar addnewTask Screen :3

--- a/app/src/main/res/layout/activity_add_new_task.xml
+++ b/app/src/main/res/layout/activity_add_new_task.xml
@@ -14,9 +14,43 @@
         android:background="@color/color_toolbar"
         android:theme="@style/ToolBarStyle">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="@string/add_new_task_toolbar_name"
+                android:textColor="@android:color/white"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageButton
+                    android:id="@+id/activity_add_new_task_btn_cancel"
+                    android:layout_width="@dimen/activity_add_new_task_toolbar_btn_width"
+                    android:layout_height="@dimen/activity_add_new_task_toolbar_btn_height"
+                    android:layout_marginLeft="@dimen/activity_add_new_task_toolbar_btn_cancel_margin_left"
+                    android:layout_marginTop="@dimen/activity_add_new_task_toolbar_btn_margin_top"
+                    android:background="@drawable/ic_unchecked" />
+
+                <ImageButton
+                    android:id="@+id/activity_add_new_task_btn_ok"
+                    android:layout_width="@dimen/activity_add_new_task_toolbar_btn_width"
+                    android:layout_height="@dimen/activity_add_new_task_toolbar_btn_height"
+                    android:layout_marginLeft="@dimen/activity_add_new_task_toolbar_btn_ok_margin_left"
+                    android:layout_marginTop="@dimen/activity_add_new_task_toolbar_btn_margin_top"
+                    android:background="@drawable/ic_checked" />
+            </LinearLayout>
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
