--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,7 @@
     <dimen name="fragment_task_list_btn_add_task_width">50dp</dimen>
     <dimen name="fragment_task_list_btn_add_task_height">50dp</dimen>
     <dimen name="fragment_task_list_btn_add_task_margin">20dp</dimen>
+
     <dimen name="activity_add_new_task_margin_top">20dp</dimen>
     <dimen name="activity_add_new_task_edt_margin_left">60dp</dimen>
     <dimen name="activity_add_new_task_margin_left">10dp</dimen>
@@ -22,6 +23,11 @@
     <dimen name="activity_add_new_task_rd_group_width">150dp</dimen>
     <dimen name="activity_add_new_task_fl_width">60dp</dimen>
     <dimen name="activity_add_new_task_fl_height">50dp</dimen>
+    <dimen name="activity_add_new_task_toolbar_btn_margin_top">15dp</dimen>
+    <dimen name="activity_add_new_task_toolbar_btn_ok_margin_left">30dp</dimen>
+    <dimen name="activity_add_new_task_toolbar_btn_cancel_margin_left">60dp</dimen>
+    <dimen name="activity_add_new_task_toolbar_btn_width">24dp</dimen>
+    <dimen name="activity_add_new_task_toolbar_btn_height">24dp</dimen>
 
 
 </resources>
