--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,10 +5,12 @@
 
     <dimen name="card_view_task_margin">2dp</dimen>
     <dimen name="card_view_task_radious">2dp</dimen>
-    <dimen name="card_view_task_tv_title_size">15sp</dimen>
-    <dimen name="card_view_task_tv_time_size">13sp</dimen>
-    <dimen name="card_view_task_tv_priority">13sp</dimen>
+    <dimen name="card_view_task_tv_title_size">18sp</dimen>
+    <dimen name="card_view_task_tv_time_size">15sp</dimen>
+    <dimen name="card_view_task_tv_priority">15sp</dimen>
     <dimen name="card_view_task_chk_done_margin">10dp</dimen>
+    <dimen name="card_view_task_content_margin">10dp</dimen>
+
 
     <dimen name="fragment_task_list_btn_add_task_width">50dp</dimen>
     <dimen name="fragment_task_list_btn_add_task_height">50dp</dimen>
