--- a/app/src/main/res/layout/card_view_task.xml
+++ b/app/src/main/res/layout/card_view_task.xml
@@ -13,6 +13,7 @@
         style="@style/AlertDialog.AppCompat.Light"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+    android:id="@+id/card_view_task_ll_container"
         android:orientation="horizontal">
 
         <CheckBox
