--- a/app/src/main/res/drawable/selector_checkbox_notify.xml
+++ b/app/src/main/res/drawable/selector_checkbox_notify.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_on_notif" android:state_checked="true"></item>
-    <item android:drawable="@drawable/ic_off_notif" android:state_checked="false"></item>
-    <item android:drawable="@drawable/ic_on_notif"></item>
+    <item android:drawable="@drawable/ic_speaker" android:state_checked="true"></item>
+    <item android:drawable="@drawable/ic_muted" android:state_checked="false"></item>
+    <item android:drawable="@drawable/ic_speaker"></item>
 </selector>
