--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -4,12 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_task_list_recycler_view"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_task_list_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+    </FrameLayout>
 
-    </android.support.v7.widget.RecyclerView>
 
     <ImageButton
         android:id="@+id/fragment_task_list_btn_add_task"
@@ -25,10 +30,10 @@
         android:id="@+id/fragment_task_list_tv_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/fragment_task_list_tv_empty"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:gravity="center_vertical|center_horizontal"
+        android:text="@string/fragment_task_list_tv_empty"
         android:textColor="@android:color/black" />
 </RelativeLayout>
