--- a/app/src/main/res/menu/menu_task_list_adapter.xml
+++ b/app/src/main/res/menu/menu_task_list_adapter.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_delete"
+        android:id="@+id/action_delete_on_task_list"
         android:orderInCategory="1"
         android:title="@string/menu_context_item_delete">
 
     </item>
     <item
-        android:id="@+id/action_edit"
+        android:id="@+id/action_edit_on_task_list"
         android:orderInCategory="2"
         android:title="@string/menu_context_item_edit">
 
